--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ box-sizing: border-box;
 body {
     font-family: Outfit;
     background-color: hsl(212, 45%, 89%);
-    padding: 100px;
+    padding: 10vw;
     text-align: center;
     font-weight: 400;
 }
@@ -23,10 +23,11 @@ p {
 
 .main {
     margin: auto;
-    width: 24%;
+    width: 20vw;
     background-color: white;
     border-radius: 20px;
     padding: 15px 5px;
+    text-align: center;
 }
 
 .code {
@@ -39,4 +40,11 @@ p {
 
 .text {
     padding: 0px 25px;
+}
+
+@media screen and (max-width:768px) {
+    .main {
+        width: 80vw;
+    }
+    
 }
