--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 h3 {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
+    font-size: 1.3rem;
 }
 
 p {
@@ -26,7 +27,7 @@ p {
     width: 20vw;
     background-color: white;
     border-radius: 20px;
-    padding: 15px 5px;
+    padding: 15px 1px;
     text-align: center;
 }
 
@@ -35,7 +36,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 20px;;
+    border-radius: 10px;;
 }
 
 .text {
@@ -44,7 +45,14 @@ p {
 
 @media screen and (max-width:768px) {
     .main {
-        width: 80vw;
+        width: 70vw;
     }
     
+    body {
+        margin: 10vh 0;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
 }
