--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ p {
 @media screen and (max-width:768px) {
     .main {
         width: 90vw;
-        margin: auto;
+        margin: 20px 5px;
     }
     
     body {
